https://github.com/users/JoshuaERichardson/projects/2/views/1?layout=board&pane=issue&itemId=31881143 fixed issue with project section showing white space on ends

--- a/public/styles/projects-simple-styles.css
+++ b/public/styles/projects-simple-styles.css
@@ -1,3 +1,7 @@
+body {
+    background-color: #e4ebf5;
+}
+
 #chip-modal3 {
     /* Allow for internal scrolling */
     overflow-y: auto;
